# kOS

./: Cargo.toml  LICENSE  README.md  flake.nix  readme.ru.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: allocator.rs  interrupts.rs  lib.rs  main.rs
src/drivers/: blockdev.rs  keyboard.rs  mod.rs  ramdisk.rs  rtc.rs  serial.rs  tty.rs
src/task/: executor.rs  keyboard.rs
tests/: basic_boot.rs  blockdev.rs  heap_allocation.rs  ramdisk.rs  should_panic.rs  stack_overflow.rs
