[package]
name = "kos"
version = "0.1.0"
authors = ["Kisel13"]
edition = "2024"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.33", features = ["map_physical_memory"] } # needs migration
volatile = "0.3.0" # needs migration
spin = "0.10.0"
x86_64 = "0.14.13" # needs migration
uart_16550 = "0.4.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.2"
embedded-time = { version = "0.12.1", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "kos"
test = false
bench = false

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
run-args = [
    "-m", "8m",
    "-serial", "stdio",
    "-rtc", "base=localtime"
]